Assets/TencentIMSDK/Native/NativeSDK.cs

using com.tencent.imsdk.unity.utils;
using com.tencent.imsdk.unity.types;
using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using com.tencent.imsdk.unity.enums;
using com.tencent.imsdk.unity.callback;
using UnityEngine;
using AOT;
using System.Text;

namespace com.tencent.imsdk.unity.native
{
  public class IMNativeSDK
  {

    #region DllImport
#if UNITY_EDITOR
#if UNITY_EDITOR_OSX
                    public const string MyLibName = "libImSDKForMac_C";
#else
                    public const string MyLibName = "ImSDK";
#endif
#else
#if UNITY_IPHONE
                    public const string MyLibName = "__Internal";
#elif UNITY_ANDROID
                    public const string MyLibName = "ImSDK";
                   
#elif UNITY_STANDALONE_WIN
                    public const string MyLibName = "ImSDK";
#elif UNITY_STANDALONE_OSX
                    public const string MyLibName = "libImSDKForMac_C";
                  
#elif UNITY_WEBGL
                    public const string MyLibName = "__Internal";
#else
    public const string MyLibName = "ImSDK";
#endif
#endif

    #endregion

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMInit(long sdk_app_id, IntPtr json_sdk_config);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMUninit();

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMLogin(IntPtr user_id, IntPtr user_sig, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMLogout(CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGetLoginStatus();

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMGetLoginUserID(StringBuilder user_id_buffer);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMSetConfig(IntPtr json_config, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr TIMGetSDKVersion();

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern long TIMGetServerTime();



    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvGetConvList(CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvDelete(IntPtr conv_id, int conv_type, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvDeleteConversationList(IntPtr conversation_id_array,bool clearMessage,CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvGetConvInfo(IntPtr json_get_conv_list_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvSetDraft(string conv_id, int conv_type, IntPtr draft_param);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvCancelDraft(string conv_id, int conv_type);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvPinConversation(string conv_id, int conv_type, bool is_pinned, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvGetTotalUnreadMessageCount(CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvGetUnreadMessageCountByFilter(IntPtr filter, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvSubscribeUnreadMessageCountByFilter(IntPtr filter);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvUnsubscribeUnreadMessageCountByFilter(IntPtr filter);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvCleanConversationUnreadMessageCount(IntPtr conversation_id,ulong clean_timestamp,ulong clean_sequence, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvAddConversationsToGroup(IntPtr group_name, IntPtr conversation_id_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvCreateConversationGroup(IntPtr group_name, IntPtr conversation_id_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvDeleteConversationGroup(IntPtr group_name, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvDeleteConversationsFromGroup(IntPtr group_name, IntPtr conversation_id_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvGetConversationGroupList(CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvGetConversationListByFilter(IntPtr filter, ulong next_seq, uint count, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvMarkConversation(IntPtr conversation_id_array, long mark_type, bool enable_mark, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvRenameConversationGroup(IntPtr old_name, IntPtr new_name, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMConvSetConversationCustomData(IntPtr conversation_id_array, IntPtr custom_data, CommonValueCallback cb, IntPtr user_data);



    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgSendMessage(string conv_id, int conv_type, IntPtr message_param, StringBuilder message_id, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgCancelSend(string conv_id, int conv_type, IntPtr message_id, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgFindMessages(IntPtr message_id_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgReportReaded(string conv_id, int conv_type, IntPtr message_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgSetOfflinePushToken(IntPtr json_token, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgDoBackground(int unread_count, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgDoForeground(CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgMarkAllMessageAsRead(CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgRevoke(string conv_id, int conv_type, IntPtr message_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgModifyMessage(IntPtr message_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgFindByMsgLocatorList(string conv_id, int conv_type, IntPtr message_locator_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgImportMsgList(string conv_id, int conv_type, IntPtr message_list_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgSaveMsg(string conv_id, int conv_type, IntPtr message_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgGetMsgList(string conv_id, int conv_type, IntPtr message_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgDelete(string conv_id, int conv_type, IntPtr json_msgdel_param, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgListDelete(string conv_id, int conv_type, IntPtr message_list, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgClearHistoryMessage(string conv_id, int conv_type, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgSetC2CReceiveMessageOpt(IntPtr json_identifier_array, int opt, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgGetC2CReceiveMessageOpt(IntPtr json_identifier_array, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgSetGroupReceiveMessageOpt(IntPtr group_id, int opt, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgSetAllReceiveMessageOpt(int opt,int start_hour,int start_minute,int start_second,int duration,CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgSetAllReceiveMessageOpt2(int opt,int start_time_stamp,int duration,CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgGetAllReceiveMessageOpt(CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgDownloadElemToPath(IntPtr json_download_elem_param, IntPtr path, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgDownloadMergerMessage(IntPtr json_single_msg, CommonValueCallback cb, IntPtr user_data);

    [DllImport(MyLibName, CallingConvention = CallingConvention.Cdecl)]
    public static extern int TIMMsgBatchSend(IntPtr json_batch_send_param, CommonValueCallback cb, IntPtr user_data);
